include/c_interface.h

    void PrintVersion();
    void* Create();
    
    void SetNTrees(void *ptr, unsigned int nTrees);
    
    void SetShrinkage(void *ptr, double shrinkage);
    void Delete(void *ptr);
    void Load(void* ptr, char *weightfile);
    void Save(void* ptr, char *weightfile);
 

    void* GetVariableRanking(void* ptr);
    
    unsigned int ExtractNumberOfVariablesFromVariableRanking(void* ptr);
    
    double ExtractImportanceOfVariableFromVariableRanking(void* ptr, unsigned int iFeature);
    
    void DeleteVariableRanking(void* ptr);